fix: small adjustments for alignment

--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -6,7 +6,8 @@
   border: none;
   border-radius: 0.4em;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   gap: 20px;
+  width: 100%;
 }
