--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -33,10 +33,10 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
-  height: 96px;
+  height: 89px;
 
   .emptyBlock {
-    height: 96px;
+    height: 89px;
     width: 96px;
   }
 }
